syntax = "proto3";

option go_package = "./internal/app/service;service";

package service;

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int32 code = 1;
  string msg = 2;
  int32 user_id = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string msg = 2;
  string token = 3;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  int32 code = 1;
  string msg = 2;
}

service User {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}